--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1 class="title">Brutal Pomodoro</h1>
     <hr color="black">
     <div id="pomotimer">
-        <p id="minute">10:00</p>
+        <p id="minute">25:00</p>
     </div>
     <div id="buttoncontainer">
         <button id="start" class="buttons" onclick="start()"style="font-size: 25px; background-color: rgb(0, 255, 0);">start</button>
-        <button id="pause" class="buttons" onclick ="pause()"style="font-size: 25px; background-color: red;">pause</button><br>
-        <button id="timePreset1" class="buttonTimer" onclick ="changePreset()"style="font-size: 25px; background-color: rgb(0, 255, 200);">25/5</button>
-        <button id="timePreset2" class="buttonTimer" onclick ="changePreset()"style="font-size: 25px; background-color: rgb(0, 255, 200);">50/10</button>
+        <button id="pause" class="buttons" onclick ="reset()"style="font-size: 25px; background-color: red;">reset</button><br>
+        <button id="timePreset1" class="buttonTimer" onclick ="setPreset1()"style="font-size: 25px; background-color: rgb(0, 255, 200);">25/5</button>
+        <button id="timePreset2" class="buttonTimer" onclick ="setPreset2()"style="font-size: 25px; background-color: rgb(0, 255, 200);">50/10</button>
     </div>
     <div class="video-container">
         <video controls autoplay loop muted src="backgroundvid.mp4" width="500px"></video>
