functional pomo timer, need to add sound

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1 class="title">Brutal Pomodoro</h1>
     <hr color="black">
+    <p id="workingTitle">lock in</p>
     <div id="pomotimer">
         <p id="minute">25:00</p>
     </div>
